--- a/src/app/shared/components/list-view/list-view.component.html
+++ b/src/app/shared/components/list-view/list-view.component.html
@@ -1,56 +1,73 @@
 <div class="list-container">
-  <table mat-table [dataSource]="dataSource" class="data-table" matSort [matSortActive]="enableSorting ? displayedColumns[0] : ''" [matSortDisabled]="!enableSorting">
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select" *ngIf="showCheckboxes">
-      <th mat-header-cell *matHeaderCellDef class="checkbox-column">
-        <mat-checkbox (change)="$event ? masterToggle() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()"
-                      [aria-label]="checkboxLabel()">
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row" class="checkbox-column">
-        <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null; onSelectionChange()"
-                      [checked]="selection.isSelected(row)"
-                      [aria-label]="checkboxLabel(row)">
-        </mat-checkbox>
-      </td>
-    </ng-container>
+  <div class="table-wrapper">
+    <table mat-table [dataSource]="dataSource" class="data-table" matSort
+      [matSortActive]="enableSorting ? displayedColumns[0] : ''" [matSortDisabled]="!enableSorting">
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select" *ngIf="showCheckboxes">
+        <th mat-header-cell *matHeaderCellDef class="checkbox-column">
+          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row" class="checkbox-column">
+          <mat-checkbox (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null; onSelectionChange()" [checked]="selection.isSelected(row)"
+            [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
 
-    <!-- Dynamic columns based on configuration -->
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
-      <th mat-header-cell *matHeaderCellDef [style.width]="column.width || 'auto'" [mat-sort-header]="column.name">
-        {{ column.header }}
-      </th>
-      <td mat-cell *matCellDef="let item" [ngClass]="getCellClass(item, column)">
-        <ng-container *ngIf="column.isHtml; else plainText">
-          <span [innerHTML]="getCellValue(item, column)"></span>
-        </ng-container>
-        <ng-template #plainText>
-          {{ getCellValue(item, column) }}
-        </ng-template>
-      </td>
-    </ng-container>
+      <!-- Dynamic columns based on configuration -->
+      <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
+        <th mat-header-cell *matHeaderCellDef [style.width]="column.width || 'auto'" [mat-sort-header]="column.name">
+          {{ column.header }}
+        </th>
+        <td mat-cell *matCellDef="let item" [ngClass]="getCellClass(item, column)">
+          <ng-container *ngIf="column.isHtml; else plainText">
+            <span [innerHTML]="getCellValue(item, column)"></span>
+          </ng-container>
+          <ng-template #plainText>
+            {{ getCellValue(item, column) }}
+          </ng-template>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" 
-        class="data-row"
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data-row"
         [class.selected]="selection.isSelected(row)">
-    </tr>
+      </tr>
 
-    <!-- No data row -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell no-data" [attr.colspan]="displayedColumns.length">
-        No data available.
-      </td>
-    </tr>
-  </table>
+      <!-- No data row -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell no-data" [attr.colspan]="displayedColumns.length">
+          No data available.
+        </td>
+      </tr>
+    </table>
+  </div>
 
-  <mat-paginator *ngIf="showPaginator"
-                 [pageSize]="pageSize"
-                 [pageSizeOptions]="pageSizeOptions"
-                 showFirstLastButtons
-                 aria-label="Select page of items">
-  </mat-paginator>
+  <!-- Custom paginator -->
+  <div class="custom-paginator" *ngIf="showPaginator && totalItems > 0">
+    <div class="page-info">
+      {{ getStartIndex() }}-{{ getEndIndex() }} of {{ totalItems }} submissions
+    </div>
+    <div class="page-controls">
+      <button type="button" class="page-control-button" [disabled]="pageIndex === 0" (click)="previousPage()">
+        <span class="page-control-arrow">&#9664;</span>
+      </button>
+      
+      <ng-container *ngFor="let page of getPageNumbers()">
+        <button type="button" *ngIf="page !== '...'" class="page-number" 
+                [class.active]="page === pageIndex + 1"
+                (click)="goToPage(+page - 1)">
+          {{ page }}
+        </button>
+        <span *ngIf="page === '...'" class="page-ellipsis">{{ page }}</span>
+      </ng-container>
+      
+      <button type="button" class="page-control-button" [disabled]="pageIndex >= totalPages - 1" (click)="nextPage()">
+        <span class="page-control-arrow">&#9654;</span>
+      </button>
+    </div>
+  </div>
 </div>
