--- a/src/app/shared/components/view-container/view-container.component.scss
+++ b/src/app/shared/components/view-container/view-container.component.scss
@@ -6,13 +6,18 @@
   overflow: hidden;
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
 .map-view {
   height: 100%;
+  position: relative;
 }
 
 .list-view {
   height: 100%;
-  overflow-y: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
