--- a/src/app/shared/components/view-container/view-container.component.scss
+++ b/src/app/shared/components/view-container/view-container.component.scss
@@ -1,18 +1,23 @@
 .view-container {
-  height: calc(100vh - 300px);
   width: 100%;
-  border: 1px solid #e0e0e0;
+  border: none;
   border-radius: 4px;
   overflow: hidden;
   background-color: white;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: none;
   display: flex;
   flex-direction: column;
+  flex: 1;
+  height: 100%;
+  min-height: 500px; 
 }
 
 .map-view {
   height: 100%;
   position: relative;
+  flex: 1;
+  min-height: 500px; 
+  display: flex; 
 }
 
 .list-view {
@@ -20,4 +25,6 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  flex: 1;
+  min-height: 0;
 }
