--- a/src/app/submissions/submissions/submissions.component.scss
+++ b/src/app/submissions/submissions/submissions.component.scss
@@ -1,9 +1,15 @@
 .container {
   padding: 20px;
+  padding-right: 30px;
+  width: 100%;
   max-width: 100%;
   background-color: white;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  height: 100%;
+  min-height: 0;
+  overflow: hidden;
 }
 
 h1 {
@@ -89,14 +95,14 @@ mat-form-field {
 }
 
 .view-container {
-  height: calc(100vh - 300px);
+  flex: 1;
   width: 100%;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
   overflow: hidden;
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  flex: 1;
+  min-height: 0;
 }
 
 .map-view {
@@ -106,6 +112,9 @@ mat-form-field {
 .list-view {
   height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
 }
 
 @media (max-width: 768px) {
