--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ html, body {
   overflow-x: hidden; 
 }
 
+.active {
+  background-color: #1f71b4;
+}
+
 app-root {
   display: flex;
   flex-direction: column;
@@ -76,6 +80,7 @@ app-map-view {
 
 .menu-items {
   display: flex;
+  height: 100%;
   gap: 20px;
 }
 
